gateway_api_manifests/gateway.yaml
# Please note that Gateway listener ports must match the configured EntryPoint ports (https://doc.traefik.io/traefik/reference/install-configuration/entrypoints/) of the Traefik deployment. In case they do not match, an ERROR message is logged, and the resource status is updated accordingly.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    # disable until i figure out the certificate...
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: secret-tls
    #         namespace: traefik
