gateway_api_manifests/route1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route1 # rename. testing this out.
  namespace: traefik
spec:
  parentRefs:
    - name: traefik
      sectionName: http
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: argocd-server
        namespace: argocd
        port: 80
